data/derived/comb/progs/unify/prog4329.ml.out
Characters 80-81:
  | VarX              -> Printf.sprintf"%s" e
                                            ^
Error: This expression has type expr but an expression was expected of type
         string
